--- a/relativization.tex
+++ b/relativization.tex
@@ -6,32 +6,48 @@ So, we have seen that relative pronouns are sensitive to the internal case and t
 
 In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
 
+I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
+
 In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
 
 
 \section{Modern German}
 
-Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause.
+I show in this section that even though the relative pronoun is sensitive to both the internal and external case, syntactically it is part of the relative clause. As a mechanism to also take the external case into account I introduce an external head.
 
-I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
+Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause. However, one important fact still remains: the relative pronoun is sensitive to both cases: the internal case only surfaces when it is more complex than the external case. That means that somehow there needs to be access to the main clause case.
 
-(1) \tsc{wh}-relatives are part of the relative clause, not of the main clause. (2) the internal-as-winner-only requirement follows from the relative pronoun being within the relative clause
+Consider the example in \ref{ex:mg-dat-acc-wen}.
 
-Relative pronouns in headless relatives are sensitive to the internal and the external case. Is the relative pronoun in Modern German in the main clause or in the embedded clause?
+\exg. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
 
-To answer that question I first step away a bit from the case facts of Modern German headless relatives, and I consider \tsc{wh}-pronouns in general in the language. \tsc{wh}-pronouns in Modern German typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
+First, let us look at the syntactic position of the relative pronoun. I provide three arguments why the headless relative pronoun is part of the relative clause (even though reference is made to the external case). The first one is extraposition in headless relatives, the second one is relative pronouns in general in Modern German and the last one is \tsc{wh}-elements in general in Modern German.
+
+The strongest argument for the headless relative pronoun being part of the relative clause comes from extraposition. Let us first look at headed relatives in Modern German. In Modern German, it is possible to extrapose a CP, but not a DP.
 
 \ex.
-\ag. Wen hast du gestern gesehen?\\
- Who have you yesterday seen\\
- `Who did you see yesterday?'\label{ex:german-wh-left}
-\bg. Ich habe ihn gestern gesehen.\\
- I have him yesterday seen\\
- `I saw him yesterday.'\label{ex:german-non-wh-not-left}
+\a. Mir ist die Sache wichtig.
+\b. *Mir ist wichtig die Sache.
 
-Specifically for headless relatives, it can also be shown that the relative pronoun in Modern German is part of the relative clause, and not outside of it. Evidence comes from extraposition.
+\ex.
+\a. Mir ist wie es dir geht wichtig.
+\b. Mir is wichtig wie es dir geht.
 
-In headless relatives it is clear that the head is part of the main clause and the relative pronoun pronoun marks the left edge of the relative clause. \ref{ex:extra-headed-base} gives an example of a headed relative clause with the relative clause in base position. \tit{das Geld} `the money' is the head of the relative clause an \tit{das er gestohlen hat} `that he stole' is the relative clause.
+Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. It illustrates that the \tsc{wh}-pronoun is at the left edge of the relative clause, and it is not where the head of the relative clause is.
+
+\ex.\citet[185]{groos1981}\label{ex:extra-headless}
+\ag. Der Hans hat zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has returned what he stolen has\\
+\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-good}
+\bg. *Der Hans hat \tbf{was} zurückgegeben, \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has what returned he stolen has\\
+\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-bad}
+
+The second argument comes from relative pronouns in headed relatives. Even though they are not headless relative pronouns, here you can see too that the head is a DP in the main clause and the relative pronoun is part of the relative clause.
+
+\ref{ex:extra-headed-base} gives an example of a headed relative clause with the relative clause in base position. \tit{das Geld} `the money' is the head of the relative clause an \tit{das er gestohlen hat} `that he stole' is the relative clause.
 \ref{ex:extra-headed-only-clause} gives an example with the relative clause extraposed, so at the right edge of the clause. The head of the relative clause is left behind. This is grammatical. This means that a relative clause can be extraposed.
 \ref{ex:extra-headed-head-clause} gives an example with the relative caluse extraposed and the head of the relative clause with it. This is ungrammatical in Modern German. This means that the head of the relative clause cannot be extraposed.
 
@@ -46,17 +62,17 @@ the Hans has the money returned which he stolen has\\
 the Hans has returned the money which he stolen has\\
 \glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
 
-Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. It illustrates that the \tsc{wh}-pronoun is at the left edge of the relative clause, and it is not
+Last, I consider \tsc{wh}-pronouns in Modern German in general. There are more \tsc{wh}-pronouns, such as \tsc{wh}-interrogatives (but not indefinites), that typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
 
-\ex.\citet[185]{groos1981}\label{ex:extra-headless}
-\ag. Der Hans hat zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has returned what he stolen has\\
-\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-good}
-\bg. *Der Hans hat \tbf{was} zurückgegeben, \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has what returned he stolen has\\
-\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-bad}
+\ex.
+\ag. Wen hast du gestern gesehen?\\
+ Who have you yesterday seen\\
+ `Who did you see yesterday?'\label{ex:german-wh-left}
+\bg. Ich habe ihn gestern gesehen.\\
+ I have him yesterday seen\\
+ `I saw him yesterday.'\label{ex:german-non-wh-not-left}
 
-Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German.
+Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German. It appears at the left edge.
 
 With that in mind, let us look at the case competition facts again. The pattern is as follows: only an internal case can surface. Here the accusative wins over the nominative.
 
@@ -79,7 +95,7 @@ This can be modelled as follows:
 	           [\tsc{f2}]
 	           [\tsc{nomP}
 	               [\tsc{f1}]
-	               [\tsc{rel}P
+	               [XP
 	                   [\phantom{xxx}, roof]
 	               ]
 	           ]
@@ -94,7 +110,11 @@ The structure shows an accusative in the relative clause. An \tsc{acc}P by defin
 
 We also understand that the other way around does not work: a nominative in the relative clause does not contain an accusative.
 
-Two problems arise: (1) if we follow this logic, do we not expect all languages with \tsc{wh}-pronouns as headless relative pronouns to show this type of case competition? A counterexample to that generalization is Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
+Two problems arise:
+
+(1) how does this licensing take place? Normally we have a single DP satisfying the case of a single V. What is happening here?
+
+(2) if we follow this logic, to show this type of case competition? (OHG and Gothic also allow this one, so that is fine, they just allow something else in addition, and I'll get back to that later) But there are languages like Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
 
 \ex.
 \ag. Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
@@ -104,9 +124,9 @@ Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease
  Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
  `Jan trusts whoever he let into the house.'
 
-The second issue: (2) how does this licensing take place? Normally we have a single DP satisfying the case of a single V. What is happening here?
 
-I propose a single answer to both of these questions: there is an external head. This is the head of the relative clause, and it is deleted in Modern German as long as it is smaller than the relative pronoun. This external head in Polish is not deleted: it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
+
+I propose a single answer to both of these questions: there is an external head. This is the head of the relative clause, and it is deleted in Modern German (as long as it is smaller than the relative pronoun). This external head in Polish is not deleted: it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
 
 There is also independent evidence for this head, namely from languages that actually let the head surface.
 
@@ -135,7 +155,12 @@ There is also independent evidence for this head, namely from languages that act
 
 So, we have the head.
 
---give here a table with on one side the tree repeated and on the other side the head, with relP at the bottom?-- %split the relative pronoun up in the w part and the other part?
+Show how Polish works, have the two distinct heads.
+
+Show how Modern German works, with the less complex case?
+
+
+--give here a table with on one side the tree repeated and on the other side the head, with XP at the bottom?-- %split the relative pronoun up in the w part and the other part?
 
 Now this accusative here can license an external nominative case. The idea is: it is inside this accusative already. We understand why it could not license a dative: \tsc{f3} is not contained in the accusative.
 
@@ -170,7 +195,7 @@ So this works.
             fit to=tree]{};
             }
                 [\tsc{f1}]
-                [\tsc{rel}
+                [XP
                     [\phantom{xxx}, roof]
                 ]
             ]
@@ -186,7 +211,7 @@ So this works.
     fit to=tree]{};
     }
         [\textcolor{LG}{\ac{nom}},edge=LG]
-        [\textcolor{LG}{\tsc{rel}},baseline,edge=LG
+        [\textcolor{LG}{XP},baseline,edge=LG
             [\textcolor{LG}{\phantom{xxx}},
             roof, baseline, edge=LG
             ]
@@ -210,7 +235,7 @@ But here it does not.
         fit to=tree]{};
         }
             [\tsc{f1}]
-            [\tsc{rel}P
+            [XP
                 [\phantom{xxx}, roof]
             ]
         ]
@@ -227,7 +252,7 @@ But here it does not.
         fit to=tree]{};
         }
             [\textcolor{LG}{\ac{nom}},edge=LG]
-            [\textcolor{LG}{\tsc{rel}},baseline,edge=LG
+            [\textcolor{LG}{XP},baseline,edge=LG
                 [\textcolor{LG}{\phantom{xxx}},
                 roof, baseline, edge=LG
                 ]
@@ -324,7 +349,7 @@ The relative clause is built, including the accusative relative pronoun. Now the
 	           [\tsc{f2}]
 	           [\tsc{nomP},name=tgt
 	               [\tsc{f1}]
-	               [\tsc{rel}
+	               [XP
 	                   [\phantom{xxx}, roof]
 	               ]
 	           ]
@@ -360,7 +385,7 @@ Now the relative clause is built first again, this time only including the nomin
     			fit to=tree]{};
     			}
     					[\tsc{f1}]
-    					[\tsc{rel}
+    					[XP
     							[\phantom{xxx}, roof]
     					]
     			]
@@ -627,14 +652,14 @@ Polish relative pronoun
 
 \begin{forest} boom
     [, s sep=40mm
-        [\tsc{rel}P,
+        [XP,
         tikz={
         \node[label=below:\tit{k},
         draw,circle,
         scale=0.875,
         fit to=tree]{};
         }
-            [\tsc{rel}]
+            [XP]
             [\tsc{persP}
                 [\tsc{pers}]
                 [\tsc{deix}P
