--- a/variation.tex
+++ b/variation.tex
@@ -51,13 +51,10 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
 
 \subsection{Old High German}
 
-External wins.
-
 Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
 The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
 The external case is dative. The predicate \tit{furira} `older' takes dative objects.
 The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
 \exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
 {are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
@@ -71,22 +68,15 @@ Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case
 The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
 The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
 The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
-\exg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
-he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
-`he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
-
-Enti aer ant uurta demo zaimo sprah
-und er, sie, es antworten der, die, das zu er, sie, es sprechen, reden, sagen
-MASC.SG.NOM.3 IND.PAST.SG.3 MASC.SG.DAT  MASC.SG.DAT.3 IND.PAST.SG.3
+\exg. enti aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
+3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} 3\tsc{sg.m.dat} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]}\\
+`he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
 The external case is accusative. The predicate \tit{bibringu} `bring to light' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
-
 
 \exg. ``Ih bibringu fona iacobes samin endi fona iuda dhen mina berga chisitzit.''\\
 1\tsc{sg}.\tsc{nom} create.\tsc{1sg} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\\
@@ -96,28 +86,35 @@ Examples in which the internal case is nominative, the external case is accusati
 `I bright to light the one who wanders through my mountains about Jacob and end of Judas'
 
 
-Internal wins.
 
-internal: acc, external: nom
+
+Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
+The internal case is accusative. The predicate \tit{zéllent} `to tell' takes accusative objects.
+The external case is nominative. The predicate \tit{ist} `to be' takes nominative objects.
+The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. thíz ist \tbf{then sie zéllent} joh \tbf{then sie sláhan wollent}!\\
-this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]} and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
-`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, ?}
+this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
+and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
+`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-nom-acc}
 
-
-
-internal: dat, external: nom
+Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
+The external case is nominative. The predicate \tit{minnot} `to love' takes nominative subjects.
+The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. \tbf{themo min uuirdit forlazan}, min minnot\\
 \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become\scsub{[dat]} read less love\scsub{[nom]}\\
-`To whom less is read, loves less.'
+`To whom less is read, loves less.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-nom-dat}
 
-
-internal: dat, external: acc
+Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
+The external case is nominative. The predicate \tit{minnot} `to love' takes nominative subjects.
+The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Themo avur tház ni gidúat, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} dagegen \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not tun/machen.3\tsc{sg} kommen/herankommen/zurück-.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg} and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} über god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
-`'
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} against \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg} kommen/herankommen/zurück-.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg} and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} über god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
+`He does not do that to him, who the sad heart comes and lives him over God's rage.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-acc-dat}
 
 
 Otfr.Ev.2.13.37
